--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,13 @@
 #quiz {
     display: none;
 }
+.boton-opcion{
+    border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
