--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,13 +1,150 @@
-#quiz {
-    display: none;
-}
-.boton-opcion{
-    border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  text-align: center;
+/* General */
+body {
+  background-color: #2C2C2C; 
+  color: #EAEAEA; 
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh; 
+}
 
+#big-container {
+  background-color: #CB562C; 
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); 
+  width: 90%;
+  max-width: 1000px;
+  padding: 30px;
+  border: 2px solid rgba(255, 255, 255, 0.2); 
+}
+
+header {
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.1); 
+  color: #ffffff; 
+  padding: 20px;
+  border-radius: 12px 12px 0 0;
+}
+
+header h1 {
+  font-family: 'Soria', sans-serif;
+  font-size: 3rem;
+  font-weight: 100;
+  margin: 0;
+}
+
+footer {
+  background-color: rgba(255, 255, 255, 0.2); 
+  margin-top: 20px;
+  color: black; 
+  padding: 10px;
+  padding-bottom: 30px;
+  text-align: center;
+  border-radius: 0 0 12px 12px;
+  font-size: 1rem;
+}
+
+#introduction {
+  text-align: center;
+  padding: 20px;
+}
+
+#introduction h1 {
+  font-size: 1.5rem;
+}
+.button-introduction{
+  border-radius: 0 10px 10px 0;
+}
+#inputUsername {
+  padding: 10px;
+  font-size: 1rem;
+  margin-top: 10px;
+  border: none;
+  border-radius: 10px 0 0 10px;
+  background-color: #525151; 
+  color: #EAEAEA; 
+}
+button.mostrar-resultados {
+  margin: 30px auto; 
+  display: block; 
+  width: 50%;
+  border-radius: 10px;
+}
+
+
+
+button {
+  background-color: rgba(255, 255, 255, 0.1); 
+  color: #EAEAEA; 
+  border: none;
+  padding: 10px 20px;
+  margin-top: 20px;
+  
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #f4f4f457; 
+}
+
+/* Quiz Section */
+#quiz {
+  display: none;
+}
+
+.preguntas-quiz {
+  display: grid; 
+  grid-template-columns: repeat(2, 1fr); 
+  gap: 20px; 
+  margin: 0 auto;
+}
+
+#pareja-preguntas {
+  padding: 20px; 
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); 
+  background-color: #E4A34E; 
+  border-radius: 8px; 
+  border: 1px solid rgba(255, 255, 255, 0.3); 
+}
+
+.preguntas-quiz-contenedor{
+  margin-top: 10px;
+}
+#preguntas-quiz-pregunta {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.button-container {
+  display: flex; 
+  justify-content: space-between; 
+  margin-top: 30px; 
+}
+
+#preguntas-quiz-respuestas {
+  font-size: 1rem;
+}
+
+input[type="radio"] {
+  margin-right: 10px;
+  accent-color: #CB562C; 
+}
+
+form div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+@font-face {
+  font-family: 'Soria';
+  src: url('./soria-font.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
